dnl Process this file with autoconf to produce a configure script.
AC_INIT(cam.c)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(aa, aa_autoinit)
AC_CHECK_LIB(pthread, pthread_create)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h aalib.h sys/ioctl.h linux/videodev2.h unistd.h)
AC_STRUCT_ST_BLKSIZE

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MMAP

AC_OUTPUT(Makefile)
AC_OUTPUT(config.h)
